# bad_apple_ascii

./: .gitignore  CMakeLists.txt  LICENSE  README.md  deploy.ps1  deploy.sh
include/: AsciiConverter.hpp  AsciiPlayer.hpp  AudioPlayer.hpp  Common.hpp  IAudioPlayer.hpp  IVideoSource.hpp  OpenCVVideoSource.hpp  Renderer.hpp  Stopwatch.hpp
src/: AsciiConverter.cpp  AsciiPlayer.cpp  AudioPlayer.cpp  LinuxRenderer.cpp  OpenCVVideoSource.cpp  WindowsRenderer.cpp  main.cpp
